# try_news_links_crawl

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  quick_start.py  新闻源重构方法研究.md  设计-v1.md
.serena/memories/: ALWAYS.md  README.md  overview.md  quick_start.md
.serena/memories/01-architecture/: README.md  decisions.md  directory_structure.md  layers.md  patterns.md  principles.md
.serena/memories/02-domain/: README.md  repository.md
.serena/memories/02-domain/config/: README.md  abstract_config.md  factory.md  metadata.md  registry.md
.serena/memories/02-domain/crawler/: README.md  execution_flow.md  layers.md  nodes.md  pruning.md  services.md
.serena/memories/03-infrastructure/: README.md  dao.md  database.md  http.md  repository.md  transaction.md
.serena/memories/04-application/: README.md  config.md  di_container.md  lifecycle.md  services.md  trigger_system.md
.serena/memories/05-conventions/: README.md  code_style.md  commits.md  memory_management.md  naming.md  testing.md
.serena/memories/06-tasks/: README.md  checklist.md  pending.md
doc/sql/: news_crawl.sql
src/: __init__.py
src/v1/: __init__.py  package-info.md
src/v1/DDD/: __init__.py
src/v1/DDD/api/: __init__.py
src/v1/DDD/app/: __init__.py
src/v1/DDD/domain/: __init__.py
src/v1/DDD/infrastructure/: __init__.py
src/v1/DDD/trigger/: __init__.py  api_trigger.py  base_trigger.py  scheduler_trigger.py
src/v1/DDD/types/: __init__.py
新闻源检查结果/: 20230312-最近30天活跃-检查结果.csv  2025-11-13 media_check.csv  设计-v1.md
研究/: 新闻源重构方法研究.md  遇到反爬虫.md
(+152 files in other folders)
